--- a/backend/civica-card/package.json
+++ b/backend/civica-card/package.json
@@ -27,6 +27,8 @@
   "homepage": "https://github.com/nebulae-pyxis/ms-civica-card#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "graphql-client": "^2.0.1",
+    "keycloak-request-token": "^0.1.0",
     "mocha": "^5.0.5",
     "pcsclite": "^0.6.0"
   },
