--- a/backend/civica-card/package.json
+++ b/backend/civica-card/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@nebulae/event-store": "^1.0.0",
+    "aes-js": "^3.1.1",
     "async-mqtt": "^1.0.1",
     "dotenv": "^5.0.1",
     "jsonwebtoken": "^8.2.1",
