--- a/deployment/gke/deployment-civica-card.yaml
+++ b/deployment/gke/deployment-civica-card.yaml
@@ -53,6 +53,9 @@ spec:
           value: '2000'
         - name: BROKER_TYPE
           value: PUBSUB
+        #OTHER CONFIGS
+        - name: SAM_CLUSTER_MQTT_CONN_STR
+          value: tcp://rcswsyrt:wAQAois_Sqt5@m15.cloudmqtt.com:16858
         # RESET LOCK INITIALIZE BACKED
         - name: LOCKVERSION
           value: "initial_lock"
