--- a/frontend/civica-card-reload-wc/package.json
+++ b/frontend/civica-card-reload-wc/package.json
@@ -43,6 +43,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "ng2-currency-mask": "^5.3.1",
     "rxjs": "~6.2.0",
     "subscriptions-transport-ws": "^0.9.15",
