--- a/frontend/civica-card-reload-wc/package.json
+++ b/frontend/civica-card-reload-wc/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@nebulae/angular-ble": "file:/home/nesas-02/Projects/nebulaCLI/angular-ble-app/dist/angular-ble/nebulae-angular-ble-1.0.4.tgz",
+    "@nebulae/angular-ble": "1.0.5",
     "@types/web-bluetooth": "0.0.4",
     "aes-js": "^3.1.1",
     "angular-svg-icon": "^6.0.0",
