--- a/frontend/civica-card-reload-wc/package.json
+++ b/frontend/civica-card-reload-wc/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:elements": "ng build --prod --output-hashing none && node elements-build.js"
+    "build:elements": "ng build --prod --output-hashing none && node elements-build.js",
+    "bundle": "ng build --prod --output-hashing none && node make-bundle.js"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "concat": "^1.0.3",
     "core-js": "^2.5.4",
     "document-register-element": "1.8.1",
+    "elements-zone-strategy": "^7.0.0",
     "fs-extra": "^7.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
