enhanced BDD test, change Reader types + expose ReaderMAsterKEy throught api

--- a/backend/civica-card/.env
+++ b/backend/civica-card/.env
@@ -14,3 +14,4 @@ EVENT_STORE_STORE_URL=mongodb://localhost:27017
 EVENT_STORE_STORE_AGGREGATES_DB_NAME=Aggregates
 EVENT_STORE_STORE_EVENTSTORE_DB_NAME=EventStore
 SAM_CLUSTER_MQTT_CONN_STR=tcp://rcswsyrt:wAQAois_Sqt5@m15.cloudmqtt.com:16858
+READER_MASTER_KEY=65,67,82,49,50,53,53,85,45,74,49,32,65,117,116,104
