SL1 Read & Write

--- a/backend/civica-card/.env
+++ b/backend/civica-card/.env
@@ -15,3 +15,6 @@ EVENT_STORE_STORE_AGGREGATES_DB_NAME=Aggregates
 EVENT_STORE_STORE_EVENTSTORE_DB_NAME=EventStore
 SAM_CLUSTER_MQTT_CONN_STR=tcp://rcswsyrt:wAQAois_Sqt5@m15.cloudmqtt.com:16858
 READER_MASTER_KEY=65,67,82,49,50,53,53,85,45,74,49,32,65,117,116,104
+CARD_AUTH_SL1_MAD=49b93146ae8e
+CARD_AUTH_SL1_ADM=ed4a58faa1eb
+CARD_AUTH_SL1_PUBLIC=be4d88e80070
