--- a/deployment/gke/deployment-civica-card.yaml
+++ b/deployment/gke/deployment-civica-card.yaml
@@ -61,6 +61,21 @@ spec:
            secretKeyRef:
              name: civica-card-reload
              key: master_key_reader
+        - name: CARD_AUTH_SL1_MAD
+          valueFrom:
+           secretKeyRef:
+             name: civica-card-reload
+             key: CARD_AUTH_SL1_MAD
+        - name: CARD_AUTH_SL1_ADM
+          valueFrom:
+           secretKeyRef:
+             name: civica-card-reload
+             key: CARD_AUTH_SL1_ADM
+        - name: CARD_AUTH_SL1_PUBLIC
+          valueFrom:
+           secretKeyRef:
+             name: civica-card-reload
+             key: CARD_AUTH_SL1_PUBLIC
         # RESET LOCK INITIALIZE BACKED
         - name: LOCKVERSION
           value: "initial_lock"
