--- a/frontend/civica-card-reload-wc/angular.json
+++ b/frontend/civica-card-reload-wc/angular.json
@@ -30,7 +30,8 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/civica-card-reload-pos/styles.css"
             ],
             "scripts": [
               {
